project(bullet LANGUAGES CXX)

add_library(bullet STATIC
					# Collision
					# BroadphaseCollision
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btAxisSweep3.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvt.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvt.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDispatcher.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btDispatcher.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btQuantizedBvh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h"
					# CollisionDispatch
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btBoxBoxDetector.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionConfiguration.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionDispatcher.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionObject.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionObject.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorld.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCollisionWorld.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btGhostObject.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btGhostObject.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btManifoldResult.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btManifoldResult.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSimulationIslandManager.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btUnionFind.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/btUnionFind.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionDispatch/SphereTriangleDetector.h"
					# CollisionShapes
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBox2dShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBox2dShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBoxShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBoxShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCapsuleShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCapsuleShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionMargin.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCollisionShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCompoundShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCompoundShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConcaveShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConcaveShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConeShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConeShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvex2dShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvex2dShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexHullShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexHullShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexInternalShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexInternalShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPointCloudShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexPolyhedron.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCylinderShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btCylinderShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btEmptyShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btEmptyShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMaterial.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMinkowskiSumShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMultiSphereShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btMultiSphereShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btOptimizedBvh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btOptimizedBvh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btShapeHull.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btShapeHull.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btSphereShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btSphereShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btStaticPlaneShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btStridingMeshInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTetrahedronShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTetrahedronShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleBuffer.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleBuffer.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleCallback.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleCallback.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleInfoMap.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMesh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMesh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleMeshShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btTriangleShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btUniformScalingShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/CollisionShapes/btUniformScalingShape.h"
					# Gimpact
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btBoxCollision.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btClipPolygon.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btContactProcessing.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btContactProcessing.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGenericPoolAllocator.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGenericPoolAllocator.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGeometryOperations.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactBvh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactBvh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactMassUtil.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactQuantizedBvh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactShape.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btGImpactShape.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btQuantization.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btTriangleShapeEx.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/btTriangleShapeEx.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_array.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_basic_geometry_operations.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_bitset.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_box_collision.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_box_set.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_box_set.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_clip_polygon.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_contact.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_contact.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_geom_types.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_geometry.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_hash_table.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_linear_math.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_math.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_memory.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_memory.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_radixsort.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_tri_collision.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/Gimpact/gim_tri_collision.h"
					# NarrowPhaseCollision
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexCast.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPointCollector.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h"
					# Dynamics
					# Character
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Character/btCharacterControllerInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Character/btKinematicCharacterController.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Character/btKinematicCharacterController.h"
					# ConstraintSolver
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btConstraintSolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btContactSolverInfo.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHinge2Constraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btHingeConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btJacobianEntry.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSliderConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolverBody.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btSolverConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btTypedConstraint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/ConstraintSolver/btUniversalConstraint.h"
					# Dynamics
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btActionInterface.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btDynamicsWorld.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btRigidBody.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btRigidBody.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Dynamics/Bullet-C-API.cpp"
					# Vehicle
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Vehicle/btRaycastVehicle.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Vehicle/btRaycastVehicle.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Vehicle/btVehicleRaycaster.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Vehicle/btWheelInfo.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletDynamics/Vehicle/btWheelInfo.h"
					# SoftBody
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btDefaultSoftBodySolver.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btDefaultSoftBodySolver.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBody.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBody.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyData.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyHelpers.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyHelpers.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyInternals.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodySolvers.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftBodySolverVertexBuffer.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftRigidCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftRigidDynamicsWorld.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftRigidDynamicsWorld.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSoftSoftCollisionAlgorithm.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/BulletSoftBody/btSparseSDF.h"
					# LinearMath
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btAabbUtil2.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btAlignedAllocator.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btAlignedAllocator.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btAlignedObjectArray.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btConvexHull.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btConvexHull.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btConvexHullComputer.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btConvexHullComputer.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btDefaultMotionState.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btGeometryUtil.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btGeometryUtil.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btHashMap.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btIDebugDraw.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btList.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btMatrix3x3.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btMinMax.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btMotionState.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btPoolAllocator.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btQuadWord.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btQuaternion.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btQuickprof.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btQuickprof.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btRandom.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btScalar.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btSerializer.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btSerializer.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btStackAlloc.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btTransform.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btTransformUtil.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/LinearMath/btVector3.h"
					# vectormath
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/vmInclude.h"
					# scalar
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/boolInVec.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/floatInVec.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/mat_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/quat_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/vec_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/scalar/vectormath_aos.h"
					# sse
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/boolInVec.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/floatInVec.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/mat_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/quat_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/vec_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/vecidx_aos.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/vectormath/sse/vectormath_aos.h"
					# ./
					"${CMAKE_CURRENT_SOURCE_DIR}/btBulletCollisionCommon.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/btBulletDynamicsCommon.h"
)

set_target_properties(bullet PROPERTIES FOLDER "engine/sdk/bullet")
