project(opcode LANGUAGES CXX)

# Source files to be compiled
add_library(opcode STATIC
                    # API
                    "${CMAKE_CURRENT_SOURCE_DIR}/api.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_BaseModel.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_BaseModel.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_HybridModel.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_HybridModel.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_IceHook.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Model.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Model.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Settings.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Opcode.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Opcode.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/StdAfx.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Stdafx.h"
                    # Trees
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_AABBTree.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_AABBTree.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Common.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Common.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_MeshInterface.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_MeshInterface.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_OptimizedTree.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_OptimizedTree.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TreeBuilders.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TreeBuilders.h"
                    # Collision queries
                    # Base colliders
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Collider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Collider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_VolumeCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_VolumeCollider.h"
                    # Standard colliders
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_AABBCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_AABBCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_LSSCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_LSSCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_OBBCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_OBBCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_PlanesCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_PlanesCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_RayCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_RayCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_SphereCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_SphereCollider.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TreeCollider.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TreeCollider.h"
                    # Overlap tests
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_BoxBoxOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_LSSAABBOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_LSSTriOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_PlanesAABBOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_PlanesTriOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_RayAABBOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_RayTriOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_SphereAABBOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_SphereTriOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TriBoxOverlap.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_TriTriOverlap.h"
                    # SweepAndPrune
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_BoxPruning.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_SweepAndPrune.h"
                    # Usages
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Picking.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/OPC_Picking.h"
                    # Ice
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceAABB.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceAABB.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceAxes.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceBoundingSphere.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceContainer.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceContainer.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceFPU.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceHPoint.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceHPoint.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceIndexedTriangle.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceIndexedTriangle.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceLSS.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceMatrix3x3.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceMatrix3x3.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceMatrix4x4.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceMatrix4x4.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceMemoryMacros.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceOBB.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceOBB.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePairs.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePlane.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePlane.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePoint.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePoint.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IcePreprocessor.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceRandom.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceRandom.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceRay.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceRay.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceRevisitedRadix.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceSegment.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceSegment.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceTriangle.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceTriangle.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceTrilist.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceTypes.h"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceUtils.cpp"
                    "${CMAKE_CURRENT_SOURCE_DIR}/Ice/IceUtils.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/Ice/Stdafx.h"
                    # ./
                    "${CMAKE_CURRENT_SOURCE_DIR}/entry_point.cpp"
)

# Project settings (i.e. additional include directories, macros etc.)
target_include_directories(opcode PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../)
target_include_directories(opcode PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../stlport)

set_target_properties(opcode PROPERTIES FOLDER "engine")